--- a/public/style.css
+++ b/public/style.css
@@ -8,14 +8,19 @@ body {
     align-items: center;
     height: 100vh;
     font-family: 'Press Start 2P', cursive, sans-serif;
-    color: white; /* Cor de texto padrão para o corpo, pode ser sobrescrita por seletores mais específicos */
+    color: white; 
 }
 
 canvas {
+canvas {
     background-color: #222;
     border: 2px solid #fff;
-    width: 1100px; /* Corrigido para 1000px, conforme seu HTML */
-    height: 700px; /* Corrigido para 700px, conforme seu HTML */
+    width: 100vw;
+    height: 100vh;
+    max-width: 1100px;
+    max-height: 700px;
+}
+ 
 }
 
 /* Estilos para as telas de sobreposição (start e game over) */
@@ -49,11 +54,11 @@ canvas {
 /* Estilos específicos para o container de game over */
 .game-over-screen {
     background: transparent;
-    backdrop-filter: blur(5px); /* Blur mais intenso para a tela de game over */
+    backdrop-filter: blur(5px); 
 }
 
 /* Estilos para títulos (h1, h2) */
-.game-title { /* Para o H1 da tela inicial */
+.game-title { 
     color: #fefefe;
     font-size: 2rem; 
     text-shadow: 0 0 10px rgba(82, 5, 5, 0.8);
@@ -62,7 +67,7 @@ canvas {
     text-align: center; 
 }
 
-.game-over-title { /* Para o H1 da tela de game over */
+.game-over-title {
     font-size: 4rem;
     color: #9b0404;
     text-shadow: 0 0 10px rgb(169, 9, 9);
@@ -338,12 +343,12 @@ canvas {
 
 .touch-controls-container {
     position: absolute;
-    bottom: 20px; /* Distância da parte inferior */
+    bottom: 150px; /* Distância da parte inferior */
     width: 100%;
     display: flex; /* Flexbox para organizar os botões */
     justify-content: space-between; /* Espaço entre os grupos de botões (esquerda/direita e pular) */
     align-items: flex-end; /* Alinha na parte inferior do contêiner */
-    padding: 0 40px; /* Espaço nas laterais */
+    padding: 0 60px; /* Espaço nas laterais */
     z-index: 50; /* Acima do canvas, mas abaixo dos modais */
     display: none; /* POR PADRÃO, OS BOTÕES ESTÃO ESCONDIDOS */
     box-sizing: border-box; /* Garante que padding não aumente a largura total */
@@ -351,7 +356,7 @@ canvas {
 
 .touch-left-right-group {
     display: flex;
-    gap: 15px; /* Espaço entre os botões 'ESQ' e 'DIR' */
+    gap: 50px; /* Espaço entre os botões 'ESQ' e 'DIR' */
 }
 
 .touch-button {
